[package]
name = "async-std-nats"
version = "0.1.0"
authors = ["Waldemar Quevedo <wally@nats.io>"]
edition = "2018"

[dependencies]
async-std = "0.99.4"
serde = { version = "1.0", features = ["derive"] }
futures-preview = { version = "0.3.0-alpha.18", features = [ "async-await", "nightly" ] }
serde_json = "1.0"
